# CADmarkable

./: .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  README.md
src/: CadController.cpp  CadController.h  Main.qml  Numpad.qml  OrthographicView.qml  PerspectiveView.qml  Snackbar.qml  ToolbarButton.qml  ViewCube.qml  ViewCubeFace.qml  main.cpp
tests/: test_main.cpp  tst_Main.qml  tst_Numpad.qml  tst_Snackbar.qml  tst_ViewCube.qml
tests/mock/CADmarkable_app/: CadController.qml  qmldir
